--- a/index.html
+++ b/index.html
@@ -385,14 +385,14 @@
                         <div class="contact-info-item padd-15">
                             <div class="icon"><i class="fa fa-map-marker-alt"></i></div>
                             <h4>Office</h4>
-                            <p>Islamabad</p>
+                            <p>PT.....</p>
                         </div>
                         <!-- Contact info item end -->
                         <!-- Contact info item start -->
                         <div class="contact-info-item padd-15">
                             <div class="icon"><i class="fa fa-envelope"></i></div>
                             <h4>Email</h4>
-                            <p>mnasirudin160@gmail.com</p>
+                            <p>blablabla@gmail.com</p>
                         </div>
                         <!-- Contact info item end -->
                         <!-- Contact info item start -->
